# elite-ai-voice-agent

./: .env.example  .gitignore  AGENTS.md  agent.py  create_assistant.py  crm.py  dtmf.py  mock_crm.py  models.py  pyproject.toml  retell_flow.json  start_mock.py  telnyx_assistant_config.json  telnyx_webhook_handler.py  update_tools_url.py
agents/: __init__.py  base.py  closing.py  greeting.py  manual_lookup.py  opening.py  payment.py  verify.py  waterfall.py
tests/: conftest.py  test_agents.py  test_behavior.py
texml-server/: vercel.json
texml-server/api/: texml.js
